--- a/static/rendered.css
+++ b/static/rendered.css
@@ -1,10 +1,35 @@
 
+* {margin: None; padding: None;font-family: Helvetica, sans-serif;}
+	
+
 body {
 	background-color: "blue";
 }
 
-h1 {
-	font-size: 3em;
-	color: Navy;
-	font-family: Helvetica, sans-serif;
+
+.content-3-fold {
+    display: flex;              
+	justify-content: space-between; 
 }
+
+.content-3-fold > div {
+    flex: 1;                   
+	margin: 0.25em;
+	padding: 10px;
+}
+.content-3-fold > h2 {
+	text-align: center;
+}
+
+table {
+    width: 100%;               /* Makes the table full width */
+    border-collapse: collapse; /* Collapses borders for a cleaner look */
+}
+
+th, td {
+    padding: 10px;            /* Adds padding inside the cells */
+    text-align: center;       /* Centers text and emojis horizontally */
+    vertical-align: middle;   /* Centers text and emojis vertically */
+	border-top: 1px solid black;
+}
+
