--- a/templates/main.html
+++ b/templates/main.html
@@ -7,9 +7,70 @@
 		<link rel="stylesheet" href="{{url_for('static', filename='rendered.css')}}"> 
 </head>
 <body>
-		<h1 class="feature">Datacember Challenge</h1>
-		<h1 class="Days">{{days}} of Data Challenges</h1>
-		<h1 class="welcome">👋 Hello {{name}}!</h1>
+		<header>
+			
+		</header>
+		<main>
+		<div class="feature">
+			<h1 class="feature">Datacember Challenge</h1>
+			<h1 class="Days">{{days}} of Data Challenges</h1>
+			<h1 class="welcome">👋 Hello {{name}}!</h1>
+		</div>		
+
+		<div class="content-3-fold">
+			<div id="Challenges">
+
+					<table>
+						<thead>
+							<tr>
+								<th>Task Name</th>
+								<th>Status</th>  
+							</tr>
+						</thead>
+						<tbody>
+							{% for i in range(0, loop_length) %}
+							<tr>
+								<td>
+									{% if status_open[i] %}
+									<a href="{{ url_for('challenge', dynamic=link[i]) }}">
+										{{ names[i] }}
+									</a>
+									{% else %}
+									{{ names[i] }}
+									{% endif %}
+								</td>
+								<td>
+									{% if status_open[i] %}
+									🟢
+									{% else %}
+									 🔴
+									{% endif %}
+								</td>  
+							</tr>
+							{% endfor %}
+						</tbody>
+					</table>				
+
+
+
+			</div>
+			<div id="Datacember">
+				<h2>Datacember</h2>
+				<h3>task 1</h3>	
+				<h3>task 2</h3>	
+				<h3>task 4</h3>	
+				<h3>task 3</h3>	
+			</div>
+			<div id="Guides">
+				<h2>Datacember</h2>
+				<h3>task 1</h3>	
+				<h3>task 2</h3>	
+				<h3>task 3</h3>	
+				<h3>task 4</h3>	
+			</div>
+			
+		</div>
+		</main>
 </body>
 </html>
 
